--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:Jokastar@localhost:5432/issue-tracker?schema=public"
+DATABASE_URL="mongodb+srv://kevinlolaka:Jokastar@cluster01.drjdk9i.mongodb.net/issueTracker?retryWrites=true&w=majority"
+
