--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "autoprefixer": "10.4.17",
     "classnames": "^2.5.1",
     "eslint": "8.56.0",
