--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.9.1",
     "autoprefixer": "10.4.17",
     "classnames": "^2.5.1",
+    "easymde": "^2.18.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "next": "14.1.0",
@@ -19,8 +20,13 @@
     "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.0",
     "react-icons": "^5.0.1",
+    "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.1",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "daisyui": "^4.6.1"
   }
 }
