--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "autoprefixer": "10.4.17",
+    "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "easymde": "^2.18.0",
     "eslint": "8.56.0",
