Set up nextAuth

--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://kevinlolaka:Jokastar@cluster01.drjdk9i.mongodb.net/issueTracker?retryWrites=true&w=majority"
-
+GOOGLE_CLIENT_ID="380062461475-mqnpm65acanm5q4nb9ds1v32evir8iaq.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="NMGosHCqVRHXq6bSZADbewKfUyI7/Wo2nqzf3wI1IJ0="
