Configuring the google provider

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 DATABASE_URL="mongodb+srv://kevinlolaka:Jokastar@cluster01.drjdk9i.mongodb.net/issueTracker?retryWrites=true&w=majority"
 GOOGLE_CLIENT_ID="380062461475-mqnpm65acanm5q4nb9ds1v32evir8iaq.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="NMGosHCqVRHXq6bSZADbewKfUyI7/Wo2nqzf3wI1IJ0="
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=NMGosHCqVRHXq6bSZADbewKfUyI7/Wo2nqzf3wI1IJ0=
