--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.3.3",
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.9.1",
     "autoprefixer": "10.4.17",
