--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "postcss": "8.4.33",
-    "prisma": "^5.3.1",
+    "prisma": "^5.9.1",
+    "query": "github:tanstack/react-query",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.0",
